<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trust In Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_icon_sets">Icon Sets</string>
    <string name="action_send_feedback">Send Feedback</string>
	<string-array name="temperature_name">
	    <item >celsius</item>
	    <item >fahrenheit</item>
	</string-array>
	<string-array name="temperature_value">
	    <item >摄氏温度</item>
	    <item >华氏温度</item>
	</string-array>
	<string-array name="rainfall_name">
	    <item >mm</item>
	    <item >cm</item>
	</string-array>
	<string-array name="rainfall_value">
	    <item >毫米</item>
	    <item >厘米</item>
	</string-array>
	<string-array name="wind_speed_name">
	    <item >km/h</item>
	    <item >mi/h</item>
	</string-array>
	<string-array name="update_interval_name">
	    <item >15分钟</item>
	    <item >45分钟</item>
	    <item >2小时</item>
	    <item >1天</item>
	</string-array>
	<string-array name="update_interval_value">
	    <item >900000</item>
	    <item >2700000</item>
	    <item >7200000</item>
	    <item >86400000</item>
	</string-array>
	<string-array name="city">
	    <item>Anhui</item>
	    <item>Hebei</item>
	    <item>Jilin</item>
	    <item>Sichuan</item>
	    <item>Bei-Jing</item>
	    <item>Heilongjiang</item>
	    <item>Liaoning</item>
	    <item>Tianjin</item>
	    <item>Chongqing</item>
	    <item>Henan</item>
	    <item>Nei Mongol Zizhiqu</item>
	    <item>Xinjiang Uygur</item>
	    <item>Fujian</item>
	    <item>Hong Kong</item>
	    <item>Ningxia</item>
	    <item>Yunnan</item>
	    <item>Gansu</item>
	    <item>Hubei</item>
	    <item>Qinghai</item>
	    <item>Zhejiang</item>
	    <item>Guangdong</item>
	    <item>Hunan</item>
	    <item>Shaanxi</item>
	    <item>Guangxi</item>
	    <item>Shandong</item>
	    <item>Guizhou</item>
	    <item>Jiangsu</item>
	    <item>Shanghai</item>
	    <item>Hainan</item>
	    <item>Jiangxi</item>
	    <item>Shanxi</item>
	</string-array>
	    <string name="application">APPLICATION</string>
	    <string name="trust_in_me">Trust In Me</string>
	    <string name="version_1_0">version 1.0</string>
	    <string name="free">FREE</string>
	    <string name="author_">AUTHOR 周钟江</string>
	    <string name="date_2014_09_21">Date 2014.09.21</string>
	    <string name="email">联系邮箱:</string>
	    <string name="phone">联系电话:</string>
	    <string name="qqemail">416274516@qq.com</string>
	    <string name="phonenumber">18175689070</string>
	    <string name="data">DATA</string>
	    <string name="custom_weather">Custom Weather</string>
</resources>
